--- a/customer.html
+++ b/customer.html
@@ -114,7 +114,7 @@
 
         
         <div>
-            <h6 class="mt-5 mb-5">Customer List</h6>
+            <h6 class="mt-4 mb-3">Customer List</h6>
         </div>
         <div id="cat-table">
           <table class="table">
@@ -130,10 +130,11 @@
                 <th scope="col" style="background: rgba(113, 99, 186); color: #fff;">Due</th>
               </tr>
             </thead>
-            <tbody id="tbody">
-              
-            </tbody>
+            <tbody id="tbody"></tbody>
           </table>
+          <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
+            <img src="./images/empty-folder.png" alt="" class="img-fluid col-12">
+          </div>
         </div>
     </div>
     <!--Container Main end-->
