--- a/purchase.html
+++ b/purchase.html
@@ -46,10 +46,6 @@
               <i class="bx bx-grid-alt nav_icon"></i>
               <span class="nav_name">Dashboard</span>
             </a>
-            <!-- <a href="#" class="nav_link" style="text-decoration: none;">
-              <i class="fa-solid fa-cart-shopping nav_icon"></i>
-              <span class="nav_name">POS</span>
-            </a> -->
             <a href="./sale.html" class="nav_link" style="text-decoration: none;">
               <i class="fa-brands fa-shopify nav_icon"></i>
               <span class="nav_name">Sale</span>
@@ -113,7 +109,7 @@
 
         
         <div>
-            <h6 class="mt-5 mb-5">Purchase List</h6>
+            <h6 class="mt-4 mb-3">Purchase List</h6>
         </div>
         <div id="cat-table">
           <table class="table">
@@ -134,6 +130,9 @@
               
             </tbody>
           </table>
+          <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
+            <img src="./images/empty-folder.png" alt="" class="img-fluid col-12">
+          </div>
         </div>
     </div>
     <!--Container Main end-->
