--- a/stock.html
+++ b/stock.html
@@ -110,7 +110,7 @@
 
 
         <div>
-          <h6 class="mt-5 mb-5">Stock List</h6>
+          <h6 class="mt-4 mb-3">Stock List</h6>
       </div>
         <div id="cat-table">
           <table class="table">
@@ -133,6 +133,9 @@
               
             </tbody>
           </table>
+          <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
+            <img src="./images/empty-folder.png" alt="" class="img-fluid col-12">
+          </div>
         </div>
       
     </div>
