--- a/customer.html
+++ b/customer.html
@@ -6,6 +6,7 @@
     <title>Smart Soft</title>
     <link rel="stylesheet" href="./sidebar.css" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./success.css" />
     
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -20,6 +21,8 @@
      rel="stylesheet"
      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
      crossorigin="anonymous"/>
+
+     <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
   </head>
   <body id="body-pd">
     <header class="header" id="header">
@@ -109,7 +112,7 @@
         <h1 style="color: #374151; font-weight: 500;">Customers</h1>
         <div class="d-flex" style="gap: 15px;">
             <a href="./customer.html" class="fs-6 " style="font-weight: 600;  color: #1e293b;">Customers</a>
-            <a type="button" class="fs-6" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-weight: 600;  color: #1e293b;">+ Add Customer</a>
+            <a type="button" class="fs-6" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-weight: 600;   color: #1e293b;">+ Add Customer</a>
             <a href="./customerDueReport.html" class="fs-6 " style="font-weight: 600;  color: #1e293b;">Customer Due Report</a>
         </div>
 
@@ -160,7 +163,7 @@
               <input type="text" placeholder="Enter Customer Address" name="address" id="address" required style="padding: 5px; border: 2px solid #34d399; border-radius: 5px; width: 100%;">
 
               <div class="text-end mt-3">
-                <button type="submit" class="btn ms-auto" style="background: #059669; color: #fff;">Add Customer</button>
+                <button type="submit" class="btn ms-auto" id="tryMe" style="background: #059669; color: #fff;">Add Customer</button>
               </div>
             </form>
           </div>
@@ -175,6 +178,9 @@
      <script>
       document.addEventListener("DOMContentLoaded", loadCustomer);
     </script>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" ></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 
 
     <script>
