--- a/brand.html
+++ b/brand.html
@@ -201,6 +201,7 @@
         <h6 class="mt-4 mb-3">Brand List</h6>
       </div>
       <div id="cat-table">
+        <div class="table-responsive" style="overflow-x: auto; -webkit-overflow-scrolling: touch;">
         <table class="table">
           <thead>
             <tr>
@@ -232,6 +233,7 @@
           </thead>
           <tbody id="tbody"></tbody>
         </table>
+      </div>
         <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
           <img
             src="./images/empty-folder.png"
