--- a/customer.html
+++ b/customer.html
@@ -121,6 +121,7 @@
             <h6 class="mt-4 mb-3">Customer List</h6>
         </div>
         <div id="cat-table">
+          <div class="table-responsive" style="overflow-x: auto; -webkit-overflow-scrolling: touch;">
           <table class="table">
             <thead >
               <tr>
@@ -136,6 +137,7 @@
             </thead>
             <tbody id="tbody"></tbody>
           </table>
+        </div>
           <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
             <img src="./images/empty-folder.png" alt="" class="img-fluid col-12">
           </div>
