--- a/employee.html
+++ b/employee.html
@@ -203,6 +203,7 @@
         <h6 class="mt-4 mb-3">Employee List</h6>
       </div>
       <div id="cat-table">
+        <div class="table-responsive" style="overflow-x: auto; -webkit-overflow-scrolling: touch;"> <!-- Add this div -->
         <table class="table">
           <thead>
             <tr>
@@ -270,6 +271,7 @@
           </thead>
           <tbody id="tbody"></tbody>
         </table>
+      </div>
         <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
           <img
             src="./images/empty-folder.png"
