--- a/product_list.html
+++ b/product_list.html
@@ -123,6 +123,7 @@
           <h6 class="mt-4 mb-3">Products</h6>
       </div>
         <div id="cat-table">
+          <div class="table-responsive" style="overflow-x: auto; -webkit-overflow-scrolling: touch;">
           <table class="table">
             <thead >
               <tr>
@@ -139,6 +140,7 @@
               
             </tbody>
           </table>
+        </div>
           <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
             <img src="./images/empty-folder.png" alt="" class="img-fluid col-12">
           </div>
