--- a/customerDueReport.html
+++ b/customerDueReport.html
@@ -28,7 +28,7 @@
         <!-- <h2>Smart Soft</h2> -->
       </div>
       <div class="">
-        <h2>SmartSoft</h2>
+        <a href="./index.html" style="color: #1e293b; text-decoration: none;"><h2>SmartSoft</h2></a>
       </div>
       <div class="user--info">
         <a href="./profile.html"><img src="./images/placeholder.png" alt=""></a>
@@ -109,7 +109,7 @@
         <h1 style="color: #374151; font-weight: 500;">Customers</h1>
         <div class="d-flex" style="gap: 15px;">
             <a href="./customer.html" class="fs-6 " style="font-weight: 600;  color: #1e293b;">Customers</a>
-            <a type="button" class="fs-6" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-weight: 600;  color: #1e293b;">+ Add Customer</a>
+            <!-- <a type="button" class="fs-6" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-weight: 600;  color: #1e293b;">+ Add Customer</a> -->
             <a href="./customerDueReport.html" class="fs-6 " style="font-weight: 600;  color: #1e293b;">Customer Due Report</a>
         </div>
 
@@ -145,7 +145,7 @@
     <!--Container Main end-->
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -170,7 +170,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- js -->
      <script src="./auth.js"></script>
