--- a/dashboard.html
+++ b/dashboard.html
@@ -23,7 +23,7 @@
         <!-- <h2>Smart Soft</h2> -->
       </div>
       <div class="">
-        <h2>SmartSoft</h2>
+        <a href="./index.html" style="color: #1e293b; text-decoration: none;"><h2>SmartSoft</h2></a>
       </div>
       <div class="user--info">
         <a href="./profile.html"><img src="./images/placeholder.png" alt=""></a>
@@ -107,9 +107,9 @@
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <h5 class="card-title" style="color: #fff;">Today Sold</h5>
-              <i class="fa-solid fa-file-invoice-dollar fs-5" style="color: #fff;"></i>
+              <i class="fa-solid fa-file-invoice-dollar fs-2" style="color: #fff;"></i>
             </div>
-            <h6 class="card-subtitle mt-2 fs-5" id="sold" style="color: #fff;"></h6>
+            <h6 class="card-subtitle mt-2 fs-4" id="sold" style="color: #fff;"></h6>
           </div>
         </div>
 
@@ -117,9 +117,9 @@
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <h5 class="card-title" style="color: #fff;">Today Purchase</h5>
-              <i class="fa-solid fa-cart-shopping fs-5" style="color: #fff;"></i>
+              <i class="fa-solid fa-cart-shopping fs-2" style="color: #fff;"></i>
             </div>
-            <h6 class="card-subtitle mt-2 fs-5" id="purchase" style="color: #fff;"></h6>
+            <h6 class="card-subtitle mt-2 fs-4" id="purchase" style="color: #fff;"></h6>
             
             
           </div>
@@ -128,10 +128,10 @@
         <div class="card col-lg-3 col-md-12 col-sm-12 p-3" style="background: #ef4444; box-shadow: 4px 4px 8px gray; ">
           <div class="card-body">
             <div class="d-flex justify-content-between">
-              <h5 class="card-title fs-5" style="color: #fff;">Today Sale Profit</h5>
-              <i class="fa-solid fa-dollar-sign fs-5" style="color: #fff;"></i>
+              <h5 class="card-title fs-5" style="color: #fff;">Today Sell Profit</h5>
+              <i class="fa-solid fa-dollar-sign fs-2" style="color: #fff;"></i>
             </div>
-            <h6 class="card-subtitle mt-2 fs-5" id="profit" style="color: #fff;"></h6>     
+            <h6 class="card-subtitle mt-2 fs-4" id="profit" style="color: #fff;"></h6>     
           </div>
         </div>
       </div>
@@ -143,9 +143,9 @@
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <h5 class="card-title fs-5" style="color: #fff;">Total Receivable</h5>
-              <i class="fa-solid fa-registered fs-5" style="color: #fff;"></i>
+              <i class="fa-solid fa-registered fs-2" style="color: #fff;"></i>
             </div>
-            <h6 class="card-subtitle mt-2 fs-5" id="receive" style="color: #fff;"></h6>     
+            <h6 class="card-subtitle mt-2 fs-4" id="receive" style="color: #fff;"></h6>     
           </div>
         </div>
 
@@ -153,9 +153,9 @@
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <h5 class="card-title fs-5" style="color: #fff;">Total Payable</h5>
-              <i class="fa-brands fa-amazon-pay fs-5" style="color: #fff;"></i>
+              <i class="fa-brands fa-amazon-pay fs-2" style="color: #fff;"></i>
             </div>
-            <h6 class="card-subtitle mt-2 fs-5" id="payable" style="color: #fff;"></h6>     
+            <h6 class="card-subtitle mt-2 fs-4" id="payable" style="color: #fff;"></h6>     
           </div>
         </div>
 
@@ -163,9 +163,9 @@
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <h5 class="card-title fs-5" style="color: #fff;">Stock - Purchase Value</h5>
-              <i class="fa-solid fa-sack-dollar fs-5" style="color: #fff;"></i>
+              <i class="fa-solid fa-sack-dollar fs-2" style="color: #fff;"></i>
             </div>
-            <h6 class="card-subtitle mt-2 fs-5" id="stock_1" style="color: #fff;"></h6>     
+            <h6 class="card-subtitle mt-2 fs-4" id="stock_1" style="color: #fff;"></h6>     
           </div>
         </div>
       </div>
@@ -178,9 +178,9 @@
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <h5 class="card-title fs-5" style="color: #fff;">Stock - Sale Value</h5>
-              <i class="fa-solid fa-sack-dollar fs-5" style="color: #fff;"></i>
+              <i class="fa-solid fa-sack-dollar fs-2" style="color: #fff;"></i>
             </div>
-            <h6 class="card-subtitle mt-2 fs-5" id="stock_2" style="color: #fff;"></h6>     
+            <h6 class="card-subtitle mt-2 fs-4" id="stock_2" style="color: #fff;"></h6>     
           </div>
         </div>
 
@@ -188,9 +188,9 @@
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <h5 class="card-title fs-5" style="color: #fff;">Total Customer</h5>
-              <i class="fa-solid fa-user-group fs-5" style="color: #fff;"></i>
+              <i class="fa-solid fa-user-group fs-2" style="color: #fff;"></i>
             </div>
-            <h6 class="card-subtitle mt-2 fs-5" id="customer" style="color: #fff;"></h6>     
+            <h6 class="card-subtitle mt-2 fs-4" id="customer" style="color: #fff;"></h6>     
           </div>
         </div>
 
@@ -198,9 +198,9 @@
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <h5 class="card-title fs-5" style="color: #fff;">Total Supplier</h5>
-              <i class="fa-solid fa-user fs-5" style="color: #fff;"></i>
+              <i class="fa-solid fa-user fs-2" style="color: #fff;"></i>
             </div>
-            <h6 class="card-subtitle mt-2 fs-5" id="supplier" style="color: #fff;"></h6>     
+            <h6 class="card-subtitle mt-2 fs-4" id="supplier" style="color: #fff;"></h6>     
           </div>
         </div>
       </div>
@@ -213,9 +213,9 @@
           <div class="card-body">
             <div class="d-flex justify-content-between">
               <h5 class="card-title fs-5" style="color: #fff;">Total Product</h5>
-              <i class="fa-solid fa-box-open fs-5" style="color: #fff;"></i>
+              <i class="fa-solid fa-box-open fs-2" style="color: #fff;"></i>
             </div>
-            <h6 class="card-subtitle mt-2 fs-5" id="product" style="color: #fff;"></h6>     
+            <h6 class="card-subtitle mt-2 fs-4" id="product" style="color: #fff;"></h6>     
           </div>
         </div>
       </div>
