--- a/brand.html
+++ b/brand.html
@@ -44,7 +44,7 @@
         <!-- <h2>Smart Soft</h2> -->
       </div>
       <div class="">
-        <h2>SmartSoft</h2>
+        <a href="./index.html" style="color: #1e293b; text-decoration: none;"><h2>SmartSoft</h2></a>
       </div>
       <div class="user--info">
         <a href="./profile.html"
@@ -180,122 +180,92 @@
     <!--Container Main start-->
     <div class="" style="margin-top: 65px">
       <h1 style="color: #374151; font-weight: 500">Brands</h1>
-      <div class="d-flex" style="gap: 15px">
-        <a
-          href="./brand.html"
-          class="fs-6"
-          style="font-weight: 600; color: #1e293b"
-          >Brands</a
-        >
-        <a
-          type="button"
-          class="fs-6"
-          data-bs-toggle="modal"
-          data-bs-target="#exampleModal"
-          style="font-weight: 600; color: #1e293b"
-          >+ Add Brand</a
-        >
-      </div>
+      
+      <div class="row col-lg-12 col-md-12 col-sm-12 mt-4">
+        <div class="col-lg-4 col-md-12 col-sm-12 mb-3">
+          <div>
+            <h5 class="mt-1 mb-2">Add Brand</h5>
+          </div>
+          <form id="brand-form" onsubmit="addBrand(event)">
+            <p class="fs-6 mb-1 pb-1" style="font-weight: 500">Brand Name:</p>
+            <input
+              type="text"
+              placeholder="Enter Brand Name"
+              name="brand"
+              id="brand"
+              required
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            />
 
-      <div>
-        <h6 class="mt-4 mb-3">Brand List</h6>
-      </div>
-      <div id="cat-table">
-        <div class="table-responsive" style="overflow-x: auto; -webkit-overflow-scrolling: touch;">
-        <table class="table">
-          <thead>
-            <tr>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
+            <div class="text-end mt-3">
+              <button
+                type="submit"
+                class="btn ms-auto"
+                id="tryMe"
+                style="background: #059669; color: #fff"
               >
-                #
-              </th>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
-              >
-                Name
-              </th>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
-              >
-                Count Products
-              </th>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
-              >
-                Action
-              </th>
-            </tr>
-          </thead>
-          <tbody id="tbody"></tbody>
-        </table>
-      </div>
-        <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
-          <img
-            src="./images/empty-folder.png"
-            alt=""
-            class="img-fluid col-12"
-          />
+                Add Brand
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="col-lg-8 col-md-12 col-sm-12 mb-3">
+          <div>
+            <h5 class="mt-3 mb-4">Brand List</h5>
+          </div>
+          <div id="cat-table">
+            <div class="table-responsive" style="overflow-x: auto; -webkit-overflow-scrolling: touch;">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    #
+                  </th>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    Name
+                  </th>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    Count Products
+                  </th>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    Action
+                  </th>
+                </tr>
+              </thead>
+              <tbody id="tbody"></tbody>
+            </table>
+          </div>
+            <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
+              <img
+                src="./images/empty-folder.png"
+                alt=""
+                class="img-fluid col-12"
+              />
+            </div>
+          </div>
         </div>
       </div>
+      
     </div>
     <!--Container Main end-->
 
-    <!-- Modal -->
-    <div
-      class="modal fade"
-      id="exampleModal"
-      tabindex="-1"
-      aria-labelledby="exampleModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title fs-4" id="exampleModalLabel">New Brand</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <form id="brand-form" onsubmit="addBrand(event)">
-              <p class="fs-6 mb-1 pb-1" style="font-weight: 500">Brand Name:</p>
-              <input
-                type="text"
-                placeholder="Enter Brand Name"
-                name="brand"
-                id="brand"
-                required
-                style="
-                  padding: 5px;
-                  border: 2px solid #34d399;
-                  border-radius: 5px;
-                  width: 100%;
-                "
-              />
-
-              <div class="text-end mt-3">
-                <button
-                  type="submit"
-                  class="btn ms-auto"
-                  id="tryMe"
-                  style="background: #059669; color: #fff"
-                >
-                  Add Brand
-                </button>
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <!-- js -->
     <script src="./auth.js"></script>
