--- a/employee.html
+++ b/employee.html
@@ -45,7 +45,7 @@
         <!-- <h2>Smart Soft</h2> -->
       </div>
       <div class="">
-        <h2>SmartSoft</h2>
+        <a href="./index.html" style="color: #1e293b; text-decoration: none;"><h2>SmartSoft</h2></a>
       </div>
       <div class="user--info">
         <a href="./profile.html"
@@ -181,105 +181,184 @@
     <!--Container Main start-->
     <div class="" style="margin-top: 65px">
       <h1 style="color: #374151; font-weight: 500">Employees</h1>
-      <div class="d-flex" style="gap: 15px">
-        <a
-          href="./employee.html"
-          class="fs-6"
-          style="font-weight: 600; color: #1e293b"
-          >Employees</a
-        >
-        <a
-          type="button"
-          class="fs-6"
-          data-bs-toggle="modal"
-          data-bs-target="#exampleModal"
-          style="font-weight: 600; color: #1e293b"
-          >+ Add Employee</a
-        >
-        <!-- <a href="./customerDueReport.html" class="fs-6 " style="font-weight: 600;  color: #1e293b;">Customer Due Report</a> -->
-      </div>
+      
+      <div class="row col-lg-12 col-md-12 col-sm-12 mt-4">
+        <div class="col-lg-4 col-md-12 col-sm-12 mb-3">
+          <div>
+            <h5 class="mt-1 mb-2">Add Employee</h5>
+          </div>
+          <form id="emp-form" onsubmit="addEmployee(event)">
+            <p class="fs-6 mb-1 pb-1" style="font-weight: 500">Name:</p>
+            <input
+              type="text"
+              placeholder="Enter Employee Name"
+              name="name"
+              id="name"
+              required
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            />
+            <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">Email:</p>
+            <input
+              type="email"
+              placeholder="Enter Employee Email"
+              name="email"
+              id="email"
+              required
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            />
+            <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">Phone:</p>
+            <input
+              type="text"
+              placeholder="Enter Employee Phone Number"
+              name="phone"
+              id="phone"
+              required
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            />
+            <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">
+              Address:
+            </p>
+            <input
+              type="text"
+              placeholder="Enter Employee Address"
+              name="address"
+              id="address"
+              required
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            />
+            <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">
+              Salary:
+            </p>
+            <input
+              type="number"
+              placeholder="Enter Employee Address"
+              name="salary"
+              id="salary"
+              required
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            />
 
-      <div>
-        <h6 class="mt-4 mb-3">Employee List</h6>
-      </div>
-      <div id="cat-table">
-        <div class="table-responsive" style="overflow-x: auto; -webkit-overflow-scrolling: touch;"> <!-- Add this div -->
-        <table class="table">
-          <thead>
-            <tr>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
+            <div class="text-end mt-3">
+              <button
+                type="submit"
+                class="btn ms-auto"
+                id="tryMe"
+                style="background: #059669; color: #fff"
               >
-                #
-              </th>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
-              >
-                Joining Date
-              </th>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
-              >
-                Name
-              </th>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
-              >
-                Email
-              </th>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
-              >
-                Phone
-              </th>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
-              >
-                Address
-              </th>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
-              >
-                Salary
-              </th>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
-              >
-                Total Receivable
-              </th>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
-              >
-                Total Paid
-              </th>
-              <th
-                scope="col"
-                style="background: rgba(113, 99, 186); color: #fff"
-              >
-                Toal Due
-              </th>
-            </tr>
-          </thead>
-          <tbody id="tbody"></tbody>
-        </table>
-      </div>
-        <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
-          <img
-            src="./images/empty-folder.png"
-            alt=""
-            class="img-fluid col-12"
-          />
+                Add Employee
+              </button>
+            </div>
+          </form>
         </div>
-      </div>
+        <div class="col-lg-8 col-md-12 col-sm-12 mb-3">
+          <div>
+            <h5 class="mt-3 mb-4">Employee List</h5>
+          </div>
+          <div id="cat-table">
+            <div class="table-responsive" style="overflow-x: auto; -webkit-overflow-scrolling: touch;"> <!-- Add this div -->
+            <table class="table">
+              <thead>
+                <tr>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    #
+                  </th>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    Joining Date
+                  </th>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    Name
+                  </th>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    Email
+                  </th>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    Phone
+                  </th>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    Address
+                  </th>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    Salary
+                  </th>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    Total Receivable
+                  </th>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    Total Paid
+                  </th>
+                  <th
+                    scope="col"
+                    style="background: rgba(113, 99, 186); color: #fff"
+                  >
+                    Toal Due
+                  </th>
+                </tr>
+              </thead>
+              <tbody id="tbody"></tbody>
+            </table>
+          </div>
+            <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
+              <img
+                src="./images/empty-folder.png"
+                alt=""
+                class="img-fluid col-12"
+              />
+            </div>
+          </div>
+        </div>
+      </div>     
     </div>
     <!--Container Main end-->
 
