--- a/purchase.html
+++ b/purchase.html
@@ -44,7 +44,7 @@
         <!-- <h2>Smart Soft</h2> -->
       </div>
       <div class="">
-        <h2>SmartSoft</h2>
+        <a href="./index.html" style="color: #1e293b; text-decoration: none;"><h2>SmartSoft</h2></a>
       </div>
       <div class="user--info">
         <a href="./profile.html"
@@ -176,7 +176,7 @@
     <!--Container Main start-->
     <div class="" style="margin-top: 65px">
       <h1 style="color: #374151; font-weight: 500">Purchases</h1>
-      <div class="d-flex" style="gap: 15px">
+      <!-- <div class="d-flex" style="gap: 15px">
         <a
           href="./purchase.html"
           class="fs-6"
@@ -191,78 +191,172 @@
           style="font-weight: 600; color: #1e293b"
           >+ Add Purchase</a
         >
-      </div>
+      </div> -->
 
-      <div>
-        <h6 class="mt-4 mb-3">Purchase List</h6>
-      </div>
-      <div id="cat-table">
-        <div
-          class="table-responsive"
-          style="overflow-x: auto; -webkit-overflow-scrolling: touch"
-        >
-          <table class="table">
-            <thead>
-              <tr>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  #
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Supplier
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Item
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Quentity
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Purchase Date
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Payable
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Paid
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Due
-                </th>
-              </tr>
-            </thead>
-            <tbody id="tbody"></tbody>
-          </table>
+      <div class="row col-lg-12 col-md-12 col-sm-12 mt-4">
+        <div class="col-lg-4 col-md-12 col-sm-12 mb-3">
+          <div>
+            <h5 class="mb-2 mt-1">Add Purchase</h5>
+          </div>
+          <form id="purchase-form" onsubmit="addPurchase(event)">
+            <p class="fs-6 mb-1 pb-1" style="font-weight: 500">
+              Select Supplier:
+            </p>
+            <select
+              name="supplier"
+              id="supplier"
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            ></select>
+            <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">
+              Select Product:
+            </p>
+            <select
+              name="product"
+              id="product"
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            ></select>
+            <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">
+              Quentity:
+            </p>
+            <input
+              type="number"
+              placeholder="Enter Quentity"
+              name="quentity"
+              id="quentity"
+              required
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            />
+            <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">
+              Payable:
+            </p>
+            <input
+              type="number"
+              placeholder="Enter Amount"
+              name="payable"
+              id="payable"
+              required
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            />
+            <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">Paid:</p>
+            <input
+              type="number"
+              placeholder="Enter Amount"
+              name="paid"
+              id="paid"
+              required
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            />
+
+            <div class="text-end mt-3">
+              <button
+                type="submit"
+                class="btn ms-auto"
+                id="tryMe"
+                style="background: #059669; color: #fff"
+              >
+                Purchase
+              </button>
+            </div>
+          </form>
         </div>
-        <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
-          <img
-            src="./images/empty-folder.png"
-            alt=""
-            class="img-fluid col-12"
-          />
+        <div class="col-lg-8 col-md-12 col-sm-12">
+          <div>
+            <h5 class="mb-4 mt-3">Purchase List</h5>
+          </div>
+          <div id="cat-table">
+            <div
+              class="table-responsive"
+              style="overflow-x: auto; -webkit-overflow-scrolling: touch"
+            >
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      #
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Supplier
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Item
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Quentity
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Purchase Date
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Payable
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Paid
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Due
+                    </th>
+                  </tr>
+                </thead>
+                <tbody id="tbody"></tbody>
+              </table>
+            </div>
+            <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
+              <img
+                src="./images/empty-folder.png"
+                alt=""
+                class="img-fluid col-12"
+              />
+            </div>
+          </div>
         </div>
       </div>
     </div>
