--- a/sale.html
+++ b/sale.html
@@ -44,7 +44,7 @@
         <!-- <h2>Smart Soft</h2> -->
       </div>
       <div class="">
-        <h2>SmartSoft</h2>
+        <a href="./index.html" style="color: #1e293b; text-decoration: none;"><h2>SmartSoft</h2></a>
       </div>
       <div class="user--info">
         <a href="./profile.html"
@@ -180,7 +180,7 @@
     <!--Container Main start-->
     <div class="" style="margin-top: 65px">
       <h1 style="color: #374151; font-weight: 500">Sale</h1>
-      <div class="d-flex" style="gap: 15px">
+      <!-- <div class="d-flex" style="gap: 15px">
         <a
           href="./sale.html"
           class="fs-6"
@@ -195,99 +195,193 @@
           style="font-weight: 600; color: #1e293b"
           >+ New Sale</a
         >
-      </div>
+      </div> -->
 
-      <div>
-        <h6 class="mt-4 mb-3">Sale List</h6>
-      </div>
-      <div id="cat-table">
-        <div
-          class="table-responsive"
-          style="overflow-x: auto; -webkit-overflow-scrolling: touch"
-        >
-          <table class="table">
-            <thead>
-              <tr>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  #
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Customer
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Item
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Quentity
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Date
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Receivable
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Paid
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Due
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Purchase Cost
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Profit
-                </th>
-                <th
-                  scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
-                >
-                  Status
-                </th>
-              </tr>
-            </thead>
-            <tbody id="tbody"></tbody>
-          </table>
+      <div class="row col-lg-12 col-md-12 col-sm-12  mt-4">
+        <div class="col-lg-4 col-md-12 col-sm-12 mb-3">
+          <div>
+            <h5 class="mb-2 mt-1" >New Sale</h5>
+          </div>
+          <form id="sale-form" onsubmit="addSale(event)">
+            <p class="fs-6 mb-1 pb-1" style="font-weight: 500">
+              Select Customer:
+            </p>
+            <select
+              name="customer"
+              id="customer"
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            ></select>
+            <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">
+              Select Product:
+            </p>
+            <select
+              name="product"
+              id="product"
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            ></select>
+            <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">
+              Quentity:
+            </p>
+            <input
+              type="number"
+              placeholder="Enter Quentity"
+              name="quentity"
+              id="quentity"
+              required
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            />
+            <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">
+              Receivable:
+            </p>
+            <input
+              type="number"
+              placeholder="Enter Amount"
+              name="receivable"
+              id="receivable"
+              required
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            />
+            <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">Paid:</p>
+            <input
+              type="number"
+              placeholder="Enter Amount"
+              name="paid"
+              id="paid"
+              required
+              style="
+                padding: 5px;
+                border: 2px solid #34d399;
+                border-radius: 5px;
+                width: 100%;
+              "
+            />
+
+            <div class="text-end mt-3">
+              <button
+                type="submit"
+                class="btn ms-auto"
+                id="tryMe"
+                style="background: #059669; color: #fff"
+              >
+                Sale
+              </button>
+            </div>
+          </form>
         </div>
-      </div>
-      <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
-        <img src="./images/empty-folder.png" alt="" class="img-fluid col-12" />
+        <div class="col-lg-8 col-md-12 col-sm-12 p-1">
+          <div>
+            <h5 class="mb-4 mt-3">Sale List</h5>
+          </div>
+          <div id="cat-table">
+            <div
+              class="table-responsive"
+              style="overflow-x: auto; -webkit-overflow-scrolling: touch"
+            >
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      #
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Customer
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Item
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Quentity
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Date
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Receivable
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Paid
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Due
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Purchase Cost
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Profit
+                    </th>
+                    <th
+                      scope="col"
+                      style="background: rgba(113, 99, 186); color: #fff"
+                    >
+                      Status
+                    </th>
+                  </tr>
+                </thead>
+                <tbody id="tbody"></tbody>
+              </table>
+            </div>
+          </div>
+          <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
+            <img src="./images/empty-folder.png" alt="" class="img-fluid col-12" />
+          </div>
+        </div>
       </div>
     </div>
     <!--Container Main end-->
 
     <!-- Modal -->
-    <div
+    <!-- <div
       class="modal fade"
       id="exampleModal"
       tabindex="-1"
@@ -394,7 +488,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- js -->
     <script src="./auth.js"></script>
