--- a/stock.html
+++ b/stock.html
@@ -38,7 +38,7 @@
         <!-- <h2>Smart Soft</h2> -->
       </div>
       <div class="">
-        <h2>SmartSoft</h2>
+        <a href="./index.html" style="color: #1e293b; text-decoration: none;"><h2>SmartSoft</h2></a>
       </div>
       <div class="user--info">
         <a href="./profile.html"
