demo button added

--- a/navbar.html
+++ b/navbar.html
@@ -17,8 +17,8 @@
     <!-- navbar start  -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid pt-2 pb-2">
-            <img src="./images/Smart-Symbol.png" alt="" style="width: 50px; ">
-            <a class="navbar-brand me-auto" id="navbar-brand" href="#">SOFT</a>
+            <a href="./index.html"><img src="./images/Smart-Symbol.png" alt="" style="width: 50px; "></a>
+            <a class="navbar-brand me-auto" id="navbar-brand" href="./index.html">SOFT</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
