--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="" id="demo">
             <a
               class="btn"
-              style="background-color: #7e22ce; color: #fff;" id="demo"
+              style="background-color: #7e22ce; color: #fff;"
               onclick="ViewDemo(event)"
             >
               VIEW DEMO
